--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.POCAndroidTEF"
+        tools:replace="android:theme"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
@@ -19,10 +20,11 @@
             android:theme="@style/Theme.POCAndroidTEF">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="safra" />
             </intent-filter>
         </activity>
+        <activity android:theme="@style/SafraAppTheme" android:name="br.com.setis.safra.integracaosafra.IntegrationActivity" android:exported="false" />
     </application>
 
 </manifest>
